--- a/themes/classic/css/estilos.styl
+++ b/themes/classic/css/estilos.styl
@@ -26,7 +26,6 @@ h1, h2
 	span
 		font-size 1.5em
 		text-align center
-		text-shadow 2px 2px  #fff
 	img
 		width 200px
 		height 300px
@@ -63,6 +62,10 @@ h1, h2
 		width 200px
 		height 300px
 		transition all 1s ease
+	#MatrizDeAsientos
+		tr 
+			td 
+				padding-right 1.5em
 	
 #nosotros, #cartelera, #nuestras_salas, #compra, #promociones, #servicios, #contacto, #inicio_sesion
 	max-width 1024px
@@ -74,6 +77,9 @@ h1, h2
 			.col-md-6
 				margin-bottom 0.5em
 				margin-right -4.5em
+				
+#PagoPuntos, #PagoTarjeta
+	display none
 	
 .active
 	background rgba(0, 0, 0, 0.8)
@@ -83,5 +89,31 @@ h1, h2
 	width 100%
 	max-height 340px
 	
+.horarios
+	margin-top 2em
+	
+.miniaturas
+	color white
+	font-size 0.8em
+	margin-top 1em
+	margin-left -2em
+	span
+		border-radius 0.3em
+		margin-right 1em
+		padding 0.2em
+		transition all 0.5s ease
+	.clasificacionPelicula
+		background rgba(19, 96, 156, 0.8)
+	.clasificacionPelicula:hover
+			background rgba(11, 33, 76, 0.8)
+	.DuracionPelicula
+		background rgba(12, 194, 12, 0.8)
+	.DuracionPelicula:hover
+		background rgba(44, 117, 5, 0.8)
+	.GeneroPelicula
+		background rgba(243, 130, 15, 0.8)
+	.GeneroPelicula:hover
+		background rgba(179, 93, 5, 0.8)
+		
 .navbar_mod
 	background rgba(0, 89, 138, 1)
