--- a/themes/classic/css/estilos.styl
+++ b/themes/classic/css/estilos.styl
@@ -1,8 +1,34 @@
 body
+	background url("../img/fondo/img.png")
+	font-family: 'Nunito', sans-serif;
 	font-size 16px
 	margin 0 auto
 	
+footer
+	.row
+		background #0059B2
+		font-size 2em
+		font-weight bold
+		margin 3em auto -3em auto
+		padding 0.5em
+		width 100%
+		#RedesSociales
+			color white
+			a
+				color white
+				text-decoration none
+				transition all 0.5s ease
+			a:hover
+				color yellow
+			#integrantes
+				font-size 0.5em	
+				ul 
+					list-style none
+		.col-md-4
+			margin-right -1em
+	
 h1, h2
+	font-family: 'Hammersmith One', sans-serif;
 	text-align center
 	
 #botonera 
@@ -64,10 +90,34 @@ h1, h2
 		transition all 1s ease
 	#MatrizDeAsientos
 		tr 
-			td 
+			td
 				padding-right 1.5em
+				padding-top 0.5em
+				a
+					//background url("../img/asientos/asiento.png")
+					border-radius 0.1em
+					//height 25px
+					padding 0.2em
+					//width 25px
+	#pantalla_asientos
+		width 110%
+		height 1em
+
+#contacto
+	strong
+		font-size 1.5em
+		
+#FormBusqueda
+	margin 2em auto 0 auto
 	
-#nosotros, #cartelera, #nuestras_salas, #compra, #promociones, #servicios, #contacto, #inicio_sesion
+#informacionPrincipal
+	margin 0 2em
+	
+#nosotros
+	p 
+		text-align justify
+	
+#nosotros, #cartelera, #nuestras_salas, #compra, #promociones, #servicios, #contacto, #boleto
 	max-width 1024px
 	margin 0 auto
 	margin-top 4em
@@ -75,8 +125,27 @@ h1, h2
 		.row
 			margin 0 auto
 			.col-md-6
-				margin-bottom 0.5em
-				margin-right -4.5em
+				margin 1em -4em 1em 0
+				transition all 1s ease
+				.info
+					background rgba(30, 30, 30, 0.6)
+					color white
+					display none
+					font-size 1.5em
+					font-weight bold
+					height 236px
+					padding 2em
+					position absolute
+					text-align justify
+					top 0
+					width 430px
+			.col-md-6:hover
+				.info
+					display block
+					
+#nuestras_salas
+	.lead
+		text-align justify
 				
 #PagoPuntos, #PagoTarjeta
 	display none
@@ -88,6 +157,11 @@ h1, h2
 .carousel-inner
 	width 100%
 	max-height 340px
+	
+.estreno
+	img
+		height 300px
+		width 200px
 	
 .horarios
 	margin-top 2em
@@ -116,4 +190,16 @@ h1, h2
 		background rgba(179, 93, 5, 0.8)
 		
 .navbar_mod
-	background rgba(0, 89, 138, 1)
+	background #0059B2
+	.navbar-brand
+		color yellow
+		img
+			margin-left -1em
+			margin-top -0.5em
+			width 50%
+			
+.nombre_cine
+	font-family 'Verdana'
+	color yellow
+	font-size 2em
+	font-weight bold
